syntax = "proto3";

package envoy.extensions.filters.common.matcher.action.v3;

import "udpa/annotations/migrate.proto";
import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.common.matcher.action.v3";
option java_outer_classname = "SkipActionProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Common Match Actions]

// Configuration for the SkipFilter match action. When matching results in this action, the
// associated filter will be ignored going for all data callbacks (including the one that
// triggered the match result). As a result, if this matching is done on the first data
// callback (e.g. request headers), this will completely skip the filter.
message SkipFilter {
}
